--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,7 +25,7 @@ body::-webkit-scrollbar {
 .Navbar, .messageContactsNavbar{
   /* border:1px solid green;   */
   border-right:1px solid rgb(58,59,60);
-  height:94%; 
+  height:95%; 
   width:27%;  
 
   /* position: fixed; 
@@ -52,7 +52,13 @@ body::-webkit-scrollbar {
   text-decoration: none;
   list-style-type: none; 
   margin: 10px 0px;
-}
+} 
+
+/* .following :hover{
+  background-color: grey;
+  border: 1px solid red; 
+  color: red;
+} */
 .Link{
   text-decoration: none;
   color: rgb(176,179,184);
@@ -66,8 +72,8 @@ body::-webkit-scrollbar {
   width: 70%; 
   height: 6vh; 
   margin: auto auto; 
-  border-right:1px solid grey;
-  border-left:1px solid grey;
+  border-right:1px solid rgb(58,59,60);
+  border-left:1px solid rgb(58,59,60);
   /* position: fixed;
   top:0px; */
 }  
@@ -132,7 +138,107 @@ body::-webkit-scrollbar {
   border-left: transparent;
   border-top: transparent;
   border-right: transparent;
+}  
+
+.Loader {
+  width : '200px';
+  height: '200px';
+  border : '1px solid red'; 
+  border-radius: '50%';
+  border-top: '1px solid blue';
+  animation: spin 2s linear infinite;
 } 
+
+@keyframes spin{
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+} 
+/*Loader in the home page*/
+.spinner {
+  position: absolute;
+  width: 9px;
+  height: 9px; 
+  top: 45%;
+}
+
+.spinner div {
+  position: absolute;
+  width: 50%;
+  height: 150%;
+  background: #0077b6 ;
+  transform: rotate(calc(var(--rotation) * 1deg)) translate(0, calc(var(--translation) * 1%));
+  animation: spinner-fzua35 1s calc(var(--delay) * 1s) infinite ease;
+}
+
+.spinner div:nth-child(1) {
+  --delay: 0.1;
+  --rotation: 36;
+  --translation: 150;
+}
+
+.spinner div:nth-child(2) {
+  --delay: 0.2;
+  --rotation: 72;
+  --translation: 150;
+}
+
+.spinner div:nth-child(3) {
+  --delay: 0.3;
+  --rotation: 108;
+  --translation: 150;
+}
+
+.spinner div:nth-child(4) {
+  --delay: 0.4;
+  --rotation: 144;
+  --translation: 150;
+}
+
+.spinner div:nth-child(5) {
+  --delay: 0.5;
+  --rotation: 180;
+  --translation: 150;
+}
+
+.spinner div:nth-child(6) {
+  --delay: 0.6;
+  --rotation: 216;
+  --translation: 150;
+}
+
+.spinner div:nth-child(7) {
+  --delay: 0.7;
+  --rotation: 252;
+  --translation: 150;
+}
+
+.spinner div:nth-child(8) {
+  --delay: 0.8;
+  --rotation: 288;
+  --translation: 150;
+}
+
+.spinner div:nth-child(9) {
+  --delay: 0.9;
+  --rotation: 324;
+  --translation: 150;
+}
+
+.spinner div:nth-child(10) {
+  --delay: 1;
+  --rotation: 360;
+  --translation: 150;
+}
+
+@keyframes spinner-fzua35 {
+  0%, 10%, 20%, 30%, 50%, 60%, 70%, 80%, 90%, 100% {
+    transform: rotate(calc(var(--rotation) * 1deg)) translate(0, calc(var(--translation) * 1%));
+  }
+
+  50% {
+    transform: rotate(calc(var(--rotation) * 1deg)) translate(0, calc(var(--translation) * 1.5%));
+  }
+}
 
 .singlePostComp :hover{
   opacity: 60%;
@@ -190,6 +296,14 @@ body::-webkit-scrollbar {
 .contactHoverDiv :hover{
   background-color:rgb(58,59,60) ; 
   cursor: pointer;
+} 
+
+.inputButton:hover {
+  box-shadow: 0 0 0 .15vw rgba(135, 207, 235, 0.186);
+}
+
+.inputButton:focus {
+  box-shadow: 0 0 0 .15vw skyblue;
 }
 
 /* Comments */
